--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,7 +58,7 @@ body {
 .selector {
     position: absolute;
     width: calc(100% - 33px);
-    z-index: 1;
+    z-index: 2000;
     border-radius: 8px;
     background-color: ghostwhite;
     border: 1px solid #ccc;
@@ -99,6 +99,7 @@ body {
         border-radius: 5px;
         font-size: 14px;
         border: 1px solid #ccc;
+        z-index: 1001;
 
         .dropdown-item {
             font-size: 16px;
